--- a/src/App.css
+++ b/src/App.css
@@ -402,7 +402,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -412,6 +411,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
+  /* For Safari */
+  -webkit-align-items:center;
 }
 
 .exhibition-image img {
@@ -553,6 +554,7 @@ fieldset {
 
 label {
   margin-top: 40px;
+  width: 100%;
   font-family: 'Lato', 'Helvetica', sans-serif; 
   font-size: .85em;
   font-weight: 600;
@@ -561,7 +563,7 @@ label {
 /* Error message span */
 error-text {
   margin-left: 20px;
-  display: inline;
+  display: inline-flex;
   text-transform: lowercase;
   font-style: italic;
   font-weight: 400;
@@ -603,11 +605,16 @@ textarea {
 }
 
 /* Submit button */
+.submit-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 #submit {
-  margin: auto;
   margin-top: 45px;
   width: 45%;
-  height: 10%;
+  padding: 10px 0 8px 0;
    /* Border Styling */
    border-right: 0;
    border-top: 0;
