--- a/src/App.css
+++ b/src/App.css
@@ -264,7 +264,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .category-container {
-	width: 30%;
+	padding: 50px;
+	width: 50%;
 	display: flex;
 	flex: 1;
 	flex-direction: column-reverse;
@@ -280,14 +281,14 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .gallery-home-item-card {
 	margin: 10px;
-	width: 300px;
-	height: 300px;
+	width: 350px;
+	height: 350px;
 	overflow: hidden;
 }
 
 .gallery-home-item-card img {
-	width: 300px;
-	height: 300px;
+	width: 350px;
+	height: 350px;
 	object-fit: cover;
 }
 
@@ -705,6 +706,7 @@ textarea {
 	}
 
 	.gallery-home-item-card {
+		margin: 0 auto;
 		width: 250px;
 		height: 250px;
 		overflow: hidden;
