--- a/src/App.css
+++ b/src/App.css
@@ -379,6 +379,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .prev-next-buttons {
+	/* Temporarily hidden */
+	display: none;
+	visibility: hidden;
 	padding-top: 30px;
 	display: flex;
 	justify-content: space-around;
@@ -816,6 +819,9 @@ textarea {
 	}
 
 	.prev-next-buttons {
+		/* Temporarily hidden */
+		display: none;
+		visibility: hidden;
 		padding-top: 90px;
 		padding-bottom: 60px;
 		display: flex;
